52/src/Grammar/ReactParser.java
// Generated from C:/Users/USER/Desktop/New folder/52/code/52/src/Grammar/ReactParser.g4 by ANTLR 4.13.1
package Grammar;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ReactParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FUNCTION=1, IMPORT=2, CONST=3, DOT=4, MAP=5, IF=6, FOR=7, ELSE=8, STRING_LITERAL=9, 
		INTEGER_LITERAL=10, DIGIT=11, OPENED_BRACES=12, OPENED_SQUERE_BRACES=13, 
		OPENED_CURLY_BRACES=14, CLOSED_CURLY_BRACES=15, CLOSED_SQUERE_BRACES=16, 
		CLOSED_BRACES=17, INT=18, STRING=19, BOOLEAN=20, VAR=21, ONCLICK=22, QU=23, 
		RETURN=24, EXPORT=25, DEFAULT=26, USESTATE=27, USEREF=28, USEEFFECT=29, 
		IDENTIFIERNAME=30, SLASH=31, OPEN_TAG=32, CLOSE_TAG=33, CLOSE_OR_EQUAL=34, 
		OPEN_OR_EQUAL=35, STYLE=36, ANDAND=37, ARROW=38, CLASS=39, LIST=40, DOUBLE_QOUTE=41, 
		SINGLE_QOUTE=42, VOID=43, LETTER=44, MAIN=45, EXTEND=46, EQUAL=47, PLUS=48, 
		MINUS=49, MINUSMINUS=50, MULTI=51, AT_SIGN=52, COMMA=53, COLON=54, SEMICOLON=55, 
		Comment=56, WS=57;
	public static final int
		RULE_program = 0, RULE_withHooks = 1, RULE_hooks = 2, RULE_usestate = 3, 
		RULE_useRef = 4, RULE_useEffect = 5, RULE_export = 6, RULE_list = 7, RULE_litral = 8, 
		RULE_elements = 9, RULE_element = 10, RULE_singlecomponent = 11, RULE_functionalcomponent = 12, 
		RULE_arrowcomponent = 13, RULE_componentBody = 14, RULE_openbraces = 15, 
		RULE_jsxElements = 16, RULE_componentcall = 17, RULE_openTag = 18, RULE_closeTag = 19, 
		RULE_selfclosing = 20, RULE_attribute = 21, RULE_functionattribute = 22, 
		RULE_map = 23, RULE_select = 24, RULE_tagContent = 25, RULE_style = 26, 
		RULE_styleAttributes = 27, RULE_function = 28, RULE_constfunction = 29, 
		RULE_call = 30, RULE_operation = 31, RULE_forloop = 32, RULE_elseIf_condition = 33, 
		RULE_else_condition = 34, RULE_if = 35, RULE_declaration = 36, RULE_assignment = 37, 
		RULE_expression = 38, RULE_type = 39, RULE_statement = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "withHooks", "hooks", "usestate", "useRef", "useEffect", "export", 
			"list", "litral", "elements", "element", "singlecomponent", "functionalcomponent", 
			"arrowcomponent", "componentBody", "openbraces", "jsxElements", "componentcall", 
			"openTag", "closeTag", "selfclosing", "attribute", "functionattribute", 
			"map", "select", "tagContent", "style", "styleAttributes", "function", 
			"constfunction", "call", "operation", "forloop", "elseIf_condition", 
			"else_condition", "if", "declaration", "assignment", "expression", "type", 
			"statement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'function'", "'import React, { useState,useRef, useEffect } from \"react\";'", 
			"'const'", "'.'", "'map'", "'if'", "'for'", "'else'", null, null, null, 
			"'('", "'['", "'{'", "'}'", "']'", "')'", "'int'", "'String'", "'boolean'", 
			"'var'", "'onClick'", "'?'", "'return'", "'export'", "'default'", "'useState'", 
			"'useRef'", "'useEffect'", null, "'/'", "'<'", "'>'", "'>='", "'<='", 
			"'style'", "'&&'", "'=>'", "'class'", "'List'", "'\"'", "'''", "'void'", 
			null, "'main'", "'extends'", "'='", "'+'", "'-'", "'--'", "'*'", "'@'", 
			"','", "':'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FUNCTION", "IMPORT", "CONST", "DOT", "MAP", "IF", "FOR", "ELSE", 
			"STRING_LITERAL", "INTEGER_LITERAL", "DIGIT", "OPENED_BRACES", "OPENED_SQUERE_BRACES", 
			"OPENED_CURLY_BRACES", "CLOSED_CURLY_BRACES", "CLOSED_SQUERE_BRACES", 
			"CLOSED_BRACES", "INT", "STRING", "BOOLEAN", "VAR", "ONCLICK", "QU", 
			"RETURN", "EXPORT", "DEFAULT", "USESTATE", "USEREF", "USEEFFECT", "IDENTIFIERNAME", 
			"SLASH", "OPEN_TAG", "CLOSE_TAG", "CLOSE_OR_EQUAL", "OPEN_OR_EQUAL", 
			"STYLE", "ANDAND", "ARROW", "CLASS", "LIST", "DOUBLE_QOUTE", "SINGLE_QOUTE", 
			"VOID", "LETTER", "MAIN", "EXTEND", "EQUAL", "PLUS", "MINUS", "MINUSMINUS", 
			"MULTI", "AT_SIGN", "COMMA", "COLON", "SEMICOLON", "Comment", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ReactParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ReactParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode IMPORT() { return getToken(ReactParser.IMPORT, 0); }
		public WithHooksContext withHooks() {
			return getRuleContext(WithHooksContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public List<ArrowcomponentContext> arrowcomponent() {
			return getRuleContexts(ArrowcomponentContext.class);
		}
		public ArrowcomponentContext arrowcomponent(int i) {
			return getRuleContext(ArrowcomponentContext.class,i);
		}
		public SinglecomponentContext singlecomponent() {
			return getRuleContext(SinglecomponentContext.class,0);
		}
		public HooksContext hooks() {
			return getRuleContext(HooksContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1077674176L) != 0)) {
					{
					{
					setState(82);
					statement();
					}
					}
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(88);
				match(IMPORT);
				setState(90);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(89);
					list();
					}
					break;
				}
				setState(95);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(92);
						arrowcomponent();
						}
						} 
					}
					setState(97);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(98);
				withHooks();
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				singlecomponent();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				hooks();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WithHooksContext extends ParserRuleContext {
		public ArrowcomponentContext arrowcomponent() {
			return getRuleContext(ArrowcomponentContext.class,0);
		}
		public ComponentBodyContext componentBody() {
			return getRuleContext(ComponentBodyContext.class,0);
		}
		public TerminalNode CLOSED_CURLY_BRACES() { return getToken(ReactParser.CLOSED_CURLY_BRACES, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(ReactParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ReactParser.SEMICOLON, i);
		}
		public ExportContext export() {
			return getRuleContext(ExportContext.class,0);
		}
		public WithHooksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_withHooks; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterWithHooks(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitWithHooks(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitWithHooks(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WithHooksContext withHooks() throws RecognitionException {
		WithHooksContext _localctx = new WithHooksContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_withHooks);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			arrowcomponent();
			setState(104);
			componentBody();
			setState(105);
			match(CLOSED_CURLY_BRACES);
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMICOLON) {
				{
				{
				setState(106);
				match(SEMICOLON);
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXPORT) {
				{
				setState(112);
				export();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HooksContext extends ParserRuleContext {
		public UsestateContext usestate() {
			return getRuleContext(UsestateContext.class,0);
		}
		public UseRefContext useRef() {
			return getRuleContext(UseRefContext.class,0);
		}
		public UseEffectContext useEffect() {
			return getRuleContext(UseEffectContext.class,0);
		}
		public HooksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hooks; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterHooks(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitHooks(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitHooks(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HooksContext hooks() throws RecognitionException {
		HooksContext _localctx = new HooksContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_hooks);
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				usestate();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				useRef();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(117);
				useEffect();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UsestateContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(ReactParser.CONST, 0); }
		public TerminalNode OPENED_SQUERE_BRACES() { return getToken(ReactParser.OPENED_SQUERE_BRACES, 0); }
		public List<TerminalNode> IDENTIFIERNAME() { return getTokens(ReactParser.IDENTIFIERNAME); }
		public TerminalNode IDENTIFIERNAME(int i) {
			return getToken(ReactParser.IDENTIFIERNAME, i);
		}
		public TerminalNode COMMA() { return getToken(ReactParser.COMMA, 0); }
		public TerminalNode CLOSED_SQUERE_BRACES() { return getToken(ReactParser.CLOSED_SQUERE_BRACES, 0); }
		public TerminalNode EQUAL() { return getToken(ReactParser.EQUAL, 0); }
		public TerminalNode USESTATE() { return getToken(ReactParser.USESTATE, 0); }
		public TerminalNode OPENED_BRACES() { return getToken(ReactParser.OPENED_BRACES, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(ReactParser.STRING_LITERAL, 0); }
		public TerminalNode CLOSED_BRACES() { return getToken(ReactParser.CLOSED_BRACES, 0); }
		public TerminalNode SEMICOLON() { return getToken(ReactParser.SEMICOLON, 0); }
		public ConstfunctionContext constfunction() {
			return getRuleContext(ConstfunctionContext.class,0);
		}
		public UsestateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usestate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterUsestate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitUsestate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitUsestate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UsestateContext usestate() throws RecognitionException {
		UsestateContext _localctx = new UsestateContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_usestate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(CONST);
			setState(121);
			match(OPENED_SQUERE_BRACES);
			setState(122);
			match(IDENTIFIERNAME);
			setState(123);
			match(COMMA);
			setState(124);
			match(IDENTIFIERNAME);
			setState(125);
			match(CLOSED_SQUERE_BRACES);
			setState(126);
			match(EQUAL);
			setState(127);
			match(USESTATE);
			setState(128);
			match(OPENED_BRACES);
			setState(129);
			match(STRING_LITERAL);
			setState(130);
			match(CLOSED_BRACES);
			setState(131);
			match(SEMICOLON);
			setState(132);
			constfunction();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseRefContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(ReactParser.CONST, 0); }
		public TerminalNode IDENTIFIERNAME() { return getToken(ReactParser.IDENTIFIERNAME, 0); }
		public TerminalNode EQUAL() { return getToken(ReactParser.EQUAL, 0); }
		public TerminalNode USEREF() { return getToken(ReactParser.USEREF, 0); }
		public OpenbracesContext openbraces() {
			return getRuleContext(OpenbracesContext.class,0);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(ReactParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ReactParser.SEMICOLON, i);
		}
		public UseRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useRef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterUseRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitUseRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitUseRef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UseRefContext useRef() throws RecognitionException {
		UseRefContext _localctx = new UseRefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_useRef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(CONST);
			setState(135);
			match(IDENTIFIERNAME);
			setState(136);
			match(EQUAL);
			setState(137);
			match(USEREF);
			setState(138);
			openbraces();
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMICOLON) {
				{
				{
				setState(139);
				match(SEMICOLON);
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseEffectContext extends ParserRuleContext {
		public TerminalNode USEEFFECT() { return getToken(ReactParser.USEEFFECT, 0); }
		public TerminalNode OPENED_BRACES() { return getToken(ReactParser.OPENED_BRACES, 0); }
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public TerminalNode OPENED_CURLY_BRACES() { return getToken(ReactParser.OPENED_CURLY_BRACES, 0); }
		public TerminalNode CLOSED_CURLY_BRACES() { return getToken(ReactParser.CLOSED_CURLY_BRACES, 0); }
		public TerminalNode COMMA() { return getToken(ReactParser.COMMA, 0); }
		public TerminalNode OPENED_SQUERE_BRACES() { return getToken(ReactParser.OPENED_SQUERE_BRACES, 0); }
		public TerminalNode CLOSED_SQUERE_BRACES() { return getToken(ReactParser.CLOSED_SQUERE_BRACES, 0); }
		public TerminalNode CLOSED_BRACES() { return getToken(ReactParser.CLOSED_BRACES, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public UseEffectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useEffect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterUseEffect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitUseEffect(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitUseEffect(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UseEffectContext useEffect() throws RecognitionException {
		UseEffectContext _localctx = new UseEffectContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_useEffect);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(USEEFFECT);
			setState(146);
			match(OPENED_BRACES);
			setState(147);
			function();
			setState(148);
			match(OPENED_CURLY_BRACES);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1077674176L) != 0)) {
				{
				{
				setState(149);
				statement();
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(155);
			match(CLOSED_CURLY_BRACES);
			setState(156);
			match(COMMA);
			setState(157);
			match(OPENED_SQUERE_BRACES);
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OPENED_CURLY_BRACES || _la==IDENTIFIERNAME) {
				{
				{
				setState(158);
				attribute();
				}
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(164);
			match(CLOSED_SQUERE_BRACES);
			setState(165);
			match(CLOSED_BRACES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExportContext extends ParserRuleContext {
		public TerminalNode EXPORT() { return getToken(ReactParser.EXPORT, 0); }
		public TerminalNode DEFAULT() { return getToken(ReactParser.DEFAULT, 0); }
		public TerminalNode IDENTIFIERNAME() { return getToken(ReactParser.IDENTIFIERNAME, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(ReactParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ReactParser.SEMICOLON, i);
		}
		public ExportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_export; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterExport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitExport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitExport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExportContext export() throws RecognitionException {
		ExportContext _localctx = new ExportContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_export);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(EXPORT);
			setState(168);
			match(DEFAULT);
			setState(169);
			match(IDENTIFIERNAME);
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMICOLON) {
				{
				{
				setState(170);
				match(SEMICOLON);
				}
				}
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
